# ERC_EL

./: .gitignore  .gitmodules  README.md
src/BMS/: a.out  compileCommand.txt  makefile  uart  uart.cpp
src/avionics_BMS/: BMS_control.cpp  BMS_control.hpp  example_usage.cpp  makefile
src/avionics_action_server/: package.xml  setup.cfg  setup.py
src/avionics_action_server/avionics_action_server/: avionics_action_server.py
src/avionics_config/: CMakeLists.txt  package.xml
src/avionics_config/config/: calibration_params.yaml  connection_params.yaml  node_ids_params.yaml  topic_names_params.yaml
src/avionics_config/src/: ConfigManager.cpp  avionics_config.cpp
src/avionics_converter/: CMakeLists.txt  package.xml
src/avionics_converter/include/avionics_converter/: ConverterManager.h  ConverterPublisher.h
src/avionics_converter/src/: ConverterManager.cpp  ConverterPublisher.cpp  avionics_converter.cpp
src/avionics_interfaces/: CMakeLists.txt  package.xml
src/avionics_interfaces/action/: RotateServo.action
src/avionics_main/: CMakeLists.txt  package.xml
src/avionics_mux/: CMakeLists.txt  package.xml
src/avionics_mux/include/avionics_mux/: MuxManager.h  MuxPublisher.h  MuxSubscriber.h
src/avionics_mux/src/: MuxManager.cpp  MuxPublisher.cpp  MuxSubscriber.cpp  avionics_mux.cpp
src/avionics_services/: CMakeLists.txt  package.xml
src/docker_foxy_desktop/: Dockerfile  attach_to_docker.sh  build.sh  run.sh
src/docker_foxy_jetson/: Dockerfile  attach_to_docker.sh  build.sh  run.sh
src/docker_humble_jetson/: Dockerfile  build.sh  run.sh
src/docker_humble_rpi/: Dockerfile  attach.sh  run.sh
src/launch/: avionics_launch.xml
src/roco-ros-interface/: CMakeLists.txt  package.xml
src/scripts/: canfd.sh
(+61 files in other folders)
